--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
     "autoload": {
         "psr-4": {"Ropeg\\Sso\\": "src/"}
     },
-    "require": {}
+    "require": {
+    "php": ">=7.1",
+    }
 }
